<resources>
    <string name="app_name">ExampleAadhaar</string>
    <string name="warning">Please follow the instructions overleaf while filling up the form.</string>
    <string name="text_1">BHARAT VISHISHT PEHCHAAN PRADHIKARAN</string>
    <string name="text_2">BHART SARKAR</string>
    <string name="text_3">Aadhaar Enrolment Update Form</string>
    <string name="text_4">Aadhaar Enrolment is free and voluntary.No charges are applicable for Form Aadhaar Enrolment.</string>
    <string name="text_5">In case of Update, provide your UID, Name and only that field which needs Update.</string>
    <string name="warning2">Use capital letters only.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="trans">Transgender</string>
    <string name="declared">Declared</string>
    <string name="verified">Verified</string>
    <string name="landmark">Landmark</string>
    <string name="street_road_lane">Street/Road/Lane</string>
    <string name="house_number">House Number</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="age">Age</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="in_case_of_update">(In case of Update)</string>
    <string name="uid">UID</string>
    <string name="pre_enrollment_id">Pre-Enrollment ID</string>
    <string name="area_locality">Area/Locality</string>
    <string name="village_town">Village/Town</string>
    <string name="post_office">Post Office</string>
    <string name="district">District</string>
    <string name="subdistrict">Subdistrict</string>
    <string name="state">State</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="pincode">PINCODE</string>
    <string name="details_of">Details Of :</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="wife">Wife</string>
    <string name="husband">Husband</string>
    <string name="guardian">Guardian</string>
    <string name="note_deatils">For children below 5 years father/mother/guardian details are mandatory.Adults can opt to not specify this information , if they can not/do not want to disclose.</string>
    <string name="name">Name</string>
    <string name="eid_aadhar_no">EID/Aadhar No.</string>
    <string name="verification_type">Verification Type : Document Based ( ) Introducer Based ( ) Head of Family ( ) Select only one of the above. Select Introducer or Head of Family only if you do not possess any documentary proof of identity and/or address. Introducer and Head of Family details are not required in case of Document based Verification</string>
    <string name="for_document_based">For document Based</string>
    <string name="poa">POA</string>
    <string name="poi">POI</string>
    <string name="dob">DOB</string>
    <string name="mandatory">(Mandatory in case of Verified Date of Birth)</string>
    <string name="por">POR</string>
    <string name="for_introducer_based">For Introducer Based</string>
    <string name="for_hof_based">For HoF Based</string>
    <string name="hof_aadhar_eid_no">Hof Aadhar/EID NO.</string>
    <string name="introducer_hof_name">Introducer/Hof Name</string>
    <string name="sign_of_introducer_or_hof">Sign of Introducer or Hof</string>
    <string name="discloser">Disclosure under section 3(2) of THE AADHAAR (TARGETED DELIVERY OF FINANCIAL AND OTHER SUBSIDIES, BENEFITS AND SERVICES) ACT, 2016</string>
    <string name="applicant_signature">Applicant Signature</string>
    <string name="verifier_signature">Verifier Signature</string>
    <string name="submit">SUBMIT</string>
    <string name="error_mobile">Mobile Number is invalid</string>

</resources>